--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -3,5 +3,50 @@
 
     <string name="hello">Hello World, GDDiscoverMeActivity!</string>
     <string name="app_name">GDDiscoverMe</string>
+    
+    <!-- Release key is in the p_strings.xml file ignored by Git -->
+	<string name="google_map_api_key_debug">0IgVgWFseCoAyOOEFSXlrEhfjQE99UGBY_sh2CA</string>
+	
+	<string name="button_text_friend">Friend</string>
+	
+
+    <string name="app_url">http://github.com/cyrilmottier/GreenDroid</string>
+    
+    <string name="more_info_on_greendroid">For more information on the GreenDroid library, go to the GitHub project\'s web page:</string>
+    
+    <!-- Activities labels -->
+    <string name="general_info_label">General information</string>
+    <string name="basic_item_label">Basic items</string>
+    <string name="xml_item_label">XML items</string>
+    <string name="tweaked_item_view_label">Tweaked itemviews</string>
+    <string name="segmented_label">SegmentedBar</string>
+    <string name="action_bar_activity_label">ActionBarActivity</string>
+    <string name="quick_action_label">QuickAction</string>
+    <string name="simple_async_image_view_label">Simple AsyncImageView</string>
+    <string name="async_image_view_list_view_label">AsyncImageView in ListView</string>
+    <string name="map_pin_drawable_label">MapPinDrawable</string>
+    <string name="paged_view_label">PagedView &amp; PageIndicator</string>
+    
+    <string name="about">About</string>
+    <string name="license">License</string>
+    
+    <!-- String used in the SegmentedActivity -->
+    <string name="segment_1">Jeff</string>
+    <string name="segment_2">Romain</string>
+    <string name="segment_3">Adam</string>
+    <string name="segment_4">Dan</string>
+    
+    <string name="show_image_1">Set image 1</string>
+    <string name="show_image_2">Set image 2</string>
+    <string name="show_image_3">Set image 3</string>
+    
+    <string name="first_screen">First screen</string>
+    
+    <string name="refresh_pressed">You\'ve just pressed a ActionBarItem.Type.Refresh button</string>
+    <string name="custom_drawable">Custom drawable. Click on another item instead</string>
+    
+    <string name="image_for_position">Image for position </string>
+    
+    <string name="about_content">GreenDroid is a development library for the Android platform. It is intented to make UI developments easier and consistent through your applications.\n\nThe GreenDroid project has been initiated by <a href="http://www.cyrilmottier.com">Cyril Mottier</a></string>
 
 </resources>
