--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -115,33 +115,158 @@
     
     <string-array name="name_array">
         <item>annie</item>
+        <item>bob</item>
         <item>bobby</item>
         <item>carl</item>
+        <item>christina</item>
+        <item>dan</item>
+        <item>eli</item>
+        <item>farina</item>
+        <item>george</item>
+        <item>henna</item>
+        <item>iram</item>
+        <item>jane</item>
+        <item>karl</item>
+        <item>laila</item>
+        <item>mashal</item>
+        <item>nyan</item>
+        <item>omer</item>
+        <item>petunia</item>
+        <item>quin</item>
+        <item>rena</item>
+        <item>sonny</item>
+        <item>tania</item>
+        <item>umer</item>
+        <item>veena</item>
+        <item>waqar</item>
+        <item>xio</item>
+        <item>yawar</item>
+        <item>zain</item>
         <item>zoey</item>
     </string-array>
     <string-array name="email_array">
-        <item>annie at mit.edu</item>
-        <item>Christina at mit.edu</item>
-        <item>Zoey at mit.edu</item>
+        <item>Annie at mit.edu</item>
         <item>Bob at mit.edy</item>
+        <item>Bobby at mit.edu</item>
+	<item>Carl at mit.edu</item>
+	<item>Christina at mit.edu</item>
+	<item>Dan at mit.edu</item>
+	<item>Eli at mit.edu</item>
+	<item>Farina at mit.edu</item>
+	<item>George at mit.edu</item>
+	<item>Henna at mit.edu</item>
+	<item>Iram at mit.edu</item>
+	<item>Jane at mit.edu</item>
+	<item>Karl at mit.edu</item>
+	<item>Laila at mit.edu</item>
+	<item>Mashal at mit.edu</item>
+	<item>Nyan at mit.edu</item>
+	<item>Omer at mit.edu</item>
+	<item>Petunia at mit.edu</item>
+	<item>Quin at mit.edu</item>
+	<item>Rena at mit.edu</item>
+	<item>Sonny at mit.edu</item>
+	<item>Tania at mit.edu</item>
+	<item>Umer at mit.edu</item>
+	<item>Veena at mit.edu</item>
+	<item>Waqar at mit.edu</item>
+	<item>Xio at mit.edu</item>
+	<item>Yawar at mit.edu</item>
+	<item>Zain at mit.edu</item>
+	<item>Zoey at mit.edu</item>
     </string-array>
     <string-array name="phone_array">
         <item>617 473 5389</item>
         <item>617 433 8989</item>
         <item>857 800 8347</item>
         <item>893 859 9384</item>
+        <item>617 423 5389</item>
+        <item>617 467 8989</item>
+        <item>857 230 8347</item>
+        <item>893 849 9384</item>
+        <item>617 473 5234</item>
+        <item>617 433 8576</item>
+        <item>857 800 6787</item>
+        <item>893 859 8967</item>
+        <item>342 473 5389</item>
+        <item>342 433 8989</item>
+        <item>243 800 8347</item>
+        <item>243 859 9384</item>
+        <item>978 473 5389</item>
+        <item>978 433 8989</item>
+        <item>978 800 8347</item>
+        <item>978 859 9384</item>
+        <item>626 473 5389</item>
+        <item>626 433 8989</item>
+        <item>626 800 8347</item>
+        <item>626 859 9384</item>
+        <item>323 800 8347</item>
+        <item>323 859 9384</item>
+        <item>626 239 9384</item>
+        <item>323 230 8347</item>
+        <item>323 549 9384</item>
     </string-array>
     <string-array name="address_array">
         <item>32D 210</item>
         <item>4 110</item>
         <item>5 101</item>
         <item>32G 800</item>
+        <item>33D 210</item>
+        <item>5 110</item>
+        <item>6 101</item>
+        <item>33G 800</item>
+        <item>34D 210</item>
+        <item>6 110</item>
+        <item>7 101</item>
+        <item>34G 800</item>
+        <item>35D 210</item>
+        <item>7 110</item>
+        <item>8 101</item>
+        <item>35G 800</item>
+        <item>36D 210</item>
+        <item>8 110</item>
+        <item>9 101</item>
+        <item>36G 800</item>
+        <item>37D 210</item>
+        <item>9 110</item>
+        <item>10 101</item>
+        <item>37G 800</item>
+        <item>38D 210</item>
+        <item>10 110</item>
+        <item>11 101</item>
+        <item>38G 800</item>
+        <item>39D 210</item>
     </string-array>
     <string-array name="friend_type_array">
         <item>friend</item>
         <item>stranger</item>
         <item>pending</item>
         <item>stranger</item>
+        <item>friend</item>
+        <item>stranger</item>
+        <item>pending</item>
+        <item>stranger</item>
+        <item>friend</item>
+        <item>stranger</item>
+        <item>pending</item>
+        <item>stranger</item>
+        <item>friend</item>
+        <item>stranger</item>
+        <item>pending</item>
+        <item>stranger</item>
+        <item>friend</item>
+        <item>stranger</item>
+        <item>pending</item>
+        <item>stranger</item>
+        <item>friend</item>
+        <item>stranger</item>
+        <item>pending</item>
+        <item>stranger</item>
+        <item>pending</item>
+        <item>stranger</item>
+        <item>pending</item>
+        <item>stranger</item>
+        <item>friend</item>
     </string-array>
     
     <string name="typeFriend">friend</string>
@@ -151,4 +276,7 @@
     <string name="addAsFriendButtonText"> Add as Friend </string>
     <string name="addPendingYesButtonText"> Approve Friend Request </string>
     <string name="addPendingNoButtonText"> Decline Friend Request </string>
+    <string name="addAsFriendMesg"> Added as Friend </string>
+    <string name="addPendingYesMesg"> Approved Friend Request </string>
+    <string name="addPendingNoMesg"> Declined Friend Request </string>
 </resources>
