--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -10,6 +10,7 @@
     
     <!-- Release key is in the p_strings.xml file ignored by Git -->
 	<string name="google_map_api_key_debug">0IgVgWFseCoAyOOEFSXlrEhfjQE99UGBY_sh2CA</string>
+	<string name="google_map_api_key_cu">0I96sqMfhOqXlgURxjMNRD6cXxS2C8ZokiwAVfg</string>
 	
 	<string name="button_text_friend">Friend</string>
 	
