navigation bar on create event page

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -69,5 +69,6 @@
     <string name="addAsFriendMesg"> Added as Friend </string>
     <string name="addPendingYesMesg"> Approved Friend Request </string>
     <string name="addPendingNoMesg"> Declined Friend Request </string>
+    <string name="publishEventMesg"> Event Invitation is Sent to all participants</string>
     
 </resources>
