--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -77,5 +77,6 @@
     <string name="addPendingYesMesg"> Approved Friend Request </string>
     <string name="addPendingNoMesg"> Declined Friend Request </string>
     <string name="publishEventMesg"> Event Invitation is Sent to all participants</string>
+    <string name="cancelEventMsg">Event deleted. Participants have been notified.</string>
     
 </resources>
