--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -86,5 +86,9 @@
     <string name="RSVPEventMsgAccept">Your acceptance of the event has been sent.</string>
     <string name="RSVPEventMsgDecline">You have declined the event.</string>
      <string name="closedEventNoEdit">This is closed event.\nYou are not allowed to modify the participants.</string>
-    
+    <string name="activityTitleEventCreateNew">Create New Event </string>
+    <string name="activityTitleEventView">View Event </string>
+    <string name="activityTitleEventRSVP">Event RSVP</string>
+    <string name="activityTitleEventPropose">Propose Change</string>
+     
 </resources>
