--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -80,7 +80,7 @@
     <string name="deleteFriendMesg"> Friend Deleted </string>
     <string name="addPendingYesMesg"> Approved Friend Request </string>
     <string name="addPendingNoMesg"> Declined Friend Request </string>
-    <string name="publishEventMesg"> Event Invitation is Sent to all participants</string>
+    <string name="publishEventMesg"> Event Invitation is sent to all participants</string>
     <string name="cancelEventMsg">Event deleted. Participants have been notified.</string>
     <string name="proposedChangeEventMsg">Your proposed changed has been sent.</string>
     <string name="RSVPEventMsgAccept">Your acceptance of the event has been sent.</string>
