fixed these 3 usability issues 1 - proposed change is now recognize instead of recall 2 - on create event, when user clicks on closed event check box, toast appears to explain this feature 2 - the two propose change buttons have 2 different  texts (propose change and send)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -172,4 +172,10 @@
         name="logout">Log out</string>
     <string
         name="help">Help</string>
+    <string
+        name="proposed_change_event_page_labels_participants">Proposed List of participants</string>
+    <string
+        name="proposed_change_event_page_labels_location">Proposed Location</string>
+    <string
+        name="proposed_change_event_page_labels_time">Proposed Start Time</string>
 </resources>
